Quorum/Library/Tests/Expressions/Fail/BadCast.quorum
text answerInput = ""
integer a = (cast, answerInput)